Додабвены основные типы

--- a/src/app/components/doorlife-root/doorlife-root.component.html
+++ b/src/app/components/doorlife-root/doorlife-root.component.html
@@ -1,4 +1,13 @@
 <div id="doorlife">
   <app-interior-list></app-interior-list>
   <app-door-list></app-door-list>
+
+  <section class="stage-view">
+    <header>
+      <h2 class="title">{{title}}</h2>
+    </header>
+    <div class="interior-view">
+      <div class="door-view"></div>
+    </div>
+  </section>
 </div>
