Реализовано получение списка интерьеров

--- a/src/app/components/interior-list/interior-list.component.html
+++ b/src/app/components/interior-list/interior-list.component.html
@@ -1,3 +1,6 @@
-<p>
-  {{error}}
-</p>
+<ul>
+  <li *ngFor="let interior of interiors">
+    <img [src]="interior.imgSrc" alt="">
+    <h3>{{interior.title}}</h3>
+  </li>
+</ul>
