--- a/src/app/components/door-list/door-list.component.html
+++ b/src/app/components/door-list/door-list.component.html
@@ -1,3 +1,6 @@
-<p>
-  door-list works!
-</p>
+<ul>
+  <li *ngFor="let door of doors">
+    <img [src]="door.imgSrc" alt="">
+    <h3>{{door.title}}</h3>
+  </li>
+</ul>
