--- a/src/styles.less
+++ b/src/styles.less
@@ -1,5 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
 
-body{
-  background-color: darken(#f5f5f5, 30%);
-}
+@import "assets/less/common";
