--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -1,3 +1,15 @@
+html,body{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  position: relative;
+  background-color: #afafaf;
+}
+
 ul{
   padding: 0;
   margin: 0;
