Реализовано получение коллекций

--- a/src/app/components/door-list/door-list.component.less
+++ b/src/app/components/door-list/door-list.component.less
@@ -4,4 +4,16 @@ ul{
   li{
     flex:none;
   }
+
+  .image{
+
+    position: relative;
+    max-width: 100px;
+
+    img{
+      display: block;
+      width: 100%;
+      height: auto;
+    }
+  }
 }
