--- a/src/app/components/door-list/door-list.component.html
+++ b/src/app/components/door-list/door-list.component.html
@@ -1,6 +1,14 @@
+<div class="list vertical">
+  <ul>
+    <li *ngFor="let collection of collections">
+      <div class="image"><img [src]="collection.imgSrc" alt=""></div>
+      <h3>{{collection.title}}</h3>
+    </li>
+  </ul>
+</div>
 <ul>
   <li *ngFor="let door of doors">
-    <img [src]="door.imgSrc" alt="">
+    <div class="image"><img [src]="door.imgSrc" alt=""></div>
     <h3>{{door.title}}</h3>
   </li>
 </ul>
