--- a/src/app/components/doorlife-root/doorlife-root.component.html
+++ b/src/app/components/doorlife-root/doorlife-root.component.html
@@ -1,13 +1,20 @@
 <div id="doorlife">
-  <app-interior-list (onFetch)="childDataFetch($event)"></app-interior-list>
-  <app-door-list (onFetch)="childDataFetch($event)"></app-door-list>
+  <app-interior-list (onFetch)="childDataFetch($event)" (onSelect)="setInterior($event)"></app-interior-list>
+  <app-door-list (onFetch)="childDataFetch($event)" (onDoorSelect)="setDoor($event)"></app-door-list>
 
   <section class="stage-view">
     <header>
       <h2 class="title">{{title}}</h2>
     </header>
     <div class="interior-view">
-      <div class="door-view"></div>
+      <div class="image">
+        <img src="{{currentInteriorUrl}}" alt="">
+      </div>
+      <div class="door-view">
+        <div class="image">
+          <img src="{{currentDoorUrl}}" alt="">
+        </div>
+      </div>
     </div>
     <div class="control-panel">
       <button type="button" (click)="showAlert()">alert</button>
