Верстка окна и основных компонентов

--- a/src/app/components/door-list/door-list.component.html
+++ b/src/app/components/door-list/door-list.component.html
@@ -1,14 +1,16 @@
-<div class="list vertical">
+<div class="collection-list">
   <ul>
     <li *ngFor="let collection of collections" (click)="getCollectionDoors(collection.id)">
       <div class="image"><img [src]="collection.imgSrc" alt=""></div>
-      <h3>{{collection.title}}</h3>
+      <div class="title">{{collection.title}}</div>
     </li>
   </ul>
 </div>
-<ul>
-  <li *ngFor="let door of doors" (click)="selectDoor(door.id)">
-    <div class="image"><img [src]="door.imgSrc" alt=""></div>
-    <h3>{{door.title}}</h3>
-  </li>
-</ul>
+<div class="door-list">
+  <ul>
+    <li *ngFor="let door of doors" (click)="selectDoor(door.id)">
+      <div class="image"><img [src]="door.imgSrc" alt=""></div>
+      <h3>{{door.title}}</h3>
+    </li>
+  </ul>
+</div>
