--- a/src/app/components/door-list/door-list.component.less
+++ b/src/app/components/door-list/door-list.component.less
@@ -1,19 +1,44 @@
 ul{
   display: flex;
+  position: relative;
+  list-style: none;
+
+  .collection-list & {
+    overflow-x: scroll;
+  }
+
+  .door-list &{
+    flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: scroll;
+  }
 
   li{
-    //flex:none;
+    flex:none;
   }
 
   .image{
 
     position: relative;
-    max-width: 100px;
+    max-width: 150px;
 
     img{
       display: block;
       width: 100%;
       height: auto;
     }
+  }
+
+  .title{
+    position: absolute;
+    box-sizing: border-box;
+    z-index: 2;
+    width: 100%;
+    bottom: 0;
+    padding: 3px 5px;
+    background-color: rgba(0,0,0,0.7);
+
+    color: #fff;
+    font: normal 14px Helvetica;
   }
 }
