--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -14,3 +14,25 @@ ul{
   padding: 0;
   margin: 0;
 }
+
+doorlife-root{
+  display: flex;
+  position: fixed;
+  top:0;
+  left:0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0, 0.3);
+
+  justify-content: center;
+  align-items: center;
+}
+
+app-interior-list{
+  position: relative;
+}
+
+app-door-list{
+  position: relative;
+
+}
