--- a/src/app/components/doorlife-root/doorlife-root.component.html
+++ b/src/app/components/doorlife-root/doorlife-root.component.html
@@ -4,7 +4,7 @@
       <div class="image">
         <img src="{{currentInteriorUrl}}" alt="">
       </div>
-      <div class="door-view">
+      <div class="door-view" draggable >
         <div class="image">
           <img src="{{currentDoorUrl}}" alt="">
         </div>
