--- a/src/app/components/doorlife-root/doorlife-root.component.less
+++ b/src/app/components/doorlife-root/doorlife-root.component.less
@@ -41,10 +41,11 @@
 
 .door-view{
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
   width: 15%;
-  height: auto;
+  min-height: 300px;
+  background-color: #9fdea1;
   z-index: 2;
 
   & > .image{
