--- a/src/app/components/doorlife-root/doorlife-root.component.less
+++ b/src/app/components/doorlife-root/doorlife-root.component.less
@@ -1,8 +1,28 @@
 #doorlife{
+  display: block;
   position: relative;
   width: 97%;
   height: 90%;
   background-color: #2a93b9;
+
+
+  .closer{
+    display: block;
+    position: absolute;
+    top: -35px;
+    right: -35px;
+    width: 44px;
+    height: 44px;
+
+    font: bold 24px/44px Tahoma;
+    text-align: center;
+
+    border-radius: 5%;
+    border: 1px solid #fff;
+
+    cursor: pointer;
+
+  }
 }
 
 .selector{
