добавлены действия в estet-door-image

--- a/src/app/components/estet-door-image/estet-door-image.component.html
+++ b/src/app/components/estet-door-image/estet-door-image.component.html
@@ -1,3 +1,6 @@
-<p>
-  estet-door-image works!
-</p>
+<div class="image">
+  <img src="{{imageUri}}" alt="">
+  <div class="panel">
+    <button class="action_link" (click)="onClick($event)">В редакторе интерьеров</button>
+  </div>
+</div>
