--- a/src/app/components/doorlife-root/doorlife-root.component.html
+++ b/src/app/components/doorlife-root/doorlife-root.component.html
@@ -21,5 +21,5 @@
   </div>
 
   <ng-template #tpl_1><span class="from-tpl">template 1</span></ng-template>
-  <div class="closer" (click)="close()">&times;</div>
+  <div class="closer" (click)="hide()">&times;</div>
 </div>
