--- a/src/app/components/doorlife-root/doorlife-root.component.less
+++ b/src/app/components/doorlife-root/doorlife-root.component.less
@@ -49,7 +49,7 @@
   height: 100%;
 
   & > .image{
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
 
@@ -63,20 +63,40 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 15%;
-  min-height: 300px;
+  //width: 150px;
+  //height: 300px;
   background-color: #9fdea1;
   z-index: 2;
 
   & > .image{
+    display: block;
     position: relative;
     width: 100%;
     height: auto;
+
+    &:after{
+      display: block;
+      position: absolute;
+      content: '';
+      top:0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #9fdea1;
+      opacity: .0;
+    }
   }
 
   img{
     display: block;
     position: relative;
     width: 100%;
+  }
+
+  .resize-handle {
+    display: inline;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
   }
 }
