--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -7,7 +7,7 @@ html,body{
 
 body{
   position: relative;
-  background-color: #afafaf;
+  //background-color: #afafaf;
 }
 
 ul{
@@ -31,10 +31,12 @@ doorlife-root{
 }
 
 app-interior-list{
+  display: block;
   position: relative;
+  overflow-x: scroll;
 }
 
 app-door-list{
+  display: block;
   position: relative;
-
 }
