--- a/src/app/components/door-list/door-list.component.less
+++ b/src/app/components/door-list/door-list.component.less
@@ -1,20 +1,26 @@
+.collection-list{
+  display: block;
+  position: relative;
+  overflow-x: scroll;
+}
+
+.door-list{
+  display: block;
+  position: relative;
+  overflow-x: scroll;
+}
+
 ul{
-  display: flex;
+  display: block;
   position: relative;
   list-style: none;
-
-  .collection-list & {
-    overflow-x: scroll;
-  }
-
-  .door-list &{
-    flex-direction: column;
-    overflow-x: hidden;
-    overflow-y: scroll;
-  }
+  white-space: nowrap;
 
   li{
-    flex:none;
+    display: inline-block;
+    box-sizing: border-box;
+    position: relative;
+    padding: 3px 0px 3px 3px;
   }
 
   .image{
@@ -33,12 +39,29 @@ ul{
     position: absolute;
     box-sizing: border-box;
     z-index: 2;
-    width: 100%;
-    bottom: 0;
+    width: ~"calc(100% - 3px)";
+    height: 10%;
+    bottom: 3px;
     padding: 3px 5px;
-    background-color: rgba(0,0,0,0.7);
+    background-color: fade(#000, 35%);
 
-    color: #fff;
-    font: normal 14px Helvetica;
+    text-align: right;
+
+    color: #f2f2f2;
+    font: normal 11px Helvetica;
+  }
+
+  .door-list &{
+    height: 100%;
+
+    li{
+      display: inline-block;
+      height: 100%;
+
+      img{
+        height: auto;
+        width: 100%;
+      }
+    }
   }
 }
