--- a/src/app/components/doorlife-root/doorlife-root.component.less
+++ b/src/app/components/doorlife-root/doorlife-root.component.less
@@ -1,24 +1,29 @@
+@bg_color: #1a4064;
+
 #doorlife{
   display: block;
   position: relative;
-  width: 97%;
+  width: 87%;
+  max-width: 1600px;
   height: 90%;
-  background-color: #2a93b9;
+  background-color: @bg_color;
+  border-radius: 3px;
 
 
   .closer{
     display: block;
     position: absolute;
-    top: -35px;
-    right: -35px;
+    top: -44px;
+    right: -44px;
     width: 44px;
     height: 44px;
 
-    font: bold 24px/44px Tahoma;
+    font: 32px/44px Tahoma;
     text-align: center;
+    color: @bg_color;
 
-    border-radius: 5%;
-    border: 1px solid #fff;
+    border-radius: 50%;
+    border: 2px solid @bg_color;
 
     cursor: pointer;
 
@@ -27,45 +32,54 @@
 
 .selector{
   position: absolute;
+  box-sizing: border-box;
   top:0;
   bottom: 0;
   right: 0;
   width: 300px;
+  background-color: @bg_color;
+  padding: 0px 3px 0px 0px;
 
+  border-radius: 0 2px 2px 0;
   overflow: hidden;
+
+
 }
 
 .stage-view{
   position: absolute;
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
   top:0;
   left: 0;
+  padding: 2px;
+  overflow: hidden;
 }
 
 .interior-view{
   position: relative;
-  width: 100%;
+  //width: 100%;
   height: 100%;
 
   & > .image{
     position: absolute;
-    width: 100%;
+    //width: 100%;
     height: 100%;
 
     img{
-      max-height: 100%;
+      width: auto;
+      height: 100%;
     }
   }
 }
 
 .door-view{
   position: absolute;
-  top: 0;
-  left: 0;
-  //width: 150px;
-  //height: 300px;
-  background-color: #9fdea1;
+  bottom: 18%;
+  left: 200px;
+  max-width: 16%;
+  height: auto;
   z-index: 2;
 
   & > .image{
@@ -85,6 +99,10 @@
       background-color: #9fdea1;
       opacity: .0;
     }
+  }
+
+  &:hover{
+    //outline: 1px solid rgba(0,0,0, 0.5);
   }
 
   img{
